--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,6 +41,8 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         repository: 'wangchucheng/hugo-eureka-starters-test'
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Update Hugo Modules
       run: |
         cd starters
