--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,8 +9,8 @@ jobs:
   sync-to-starters:
     runs-on: ubuntu-latest
     name: Sync to Starters
-    permissions:
-      contents: write
+    # permissions:
+    #   contents: write
     steps:
     - name: Checkout Eureka
       uses: actions/checkout@v2
@@ -35,14 +35,19 @@ jobs:
       uses: peaceiris/actions-hugo@v2
       with:
         hugo-version: 'latest'
+    - name: Commit and Push
+      uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        repository: starters
+        commit_message: 'chore: upgrade to {{.tag}}'
     - name: Cd to Starters
       run: cd starters
     - name: Release Starters
       uses: softprops/action-gh-release@v1
       with:
         repository: 'wangchucheng/hugo-eureka-starters-test'
-      # env:
-      #   GITHUB_TOKEN: ${{ secrets.RELEASE_GITHUB_TOKEN }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.RELEASE_GITHUB_TOKEN }}
     - name: Update Hugo Modules
       run: |
         cd starters
