--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -39,7 +39,9 @@ jobs:
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
         repository: starters
-        commit_message: 'chore: upgrade to {{.tag}}'
+        commit_message: 'chore: upgrade to ${GITHUB_EVENT_REF}'
+      env:
+        GITHUB_TOKEN: ${{ secrets.RELEASE_GITHUB_TOKEN }}
     - name: Cd to Starters
       run: cd starters
     - name: Release Starters
