--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -39,7 +39,7 @@ jobs:
     - name: Cd to Starters
       run: cd starters && ls .
     - name: Commit
-      run: 'git add . && git commit -m "chore: upgrade to ${{ env.GITHUB_REF }}"'
+      run: 'cd starters && git add . && git commit -m "chore: upgrade to ${{ env.GITHUB_REF }}"'
     - name: Push
       uses: ad-m/github-push-action@v0.6.0
       with:
