--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,18 +41,15 @@ jobs:
         cd starters
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
-        git add . && git commit -m "chore: upgrade to ${{ env.GITHUB_REF }}"
-        remote_repo="https://wangchucheng:${{ secrets.RELEASE_GITHUB_TOKEN }}@github.com/wangchucheng/hugo-eureka-starters-test.git"
-        git config --unset-all http.https://github.com/.extraheader
-        git push "${remote_repo}" monolingual
+        git add . && git commit -m "chore: upgrade to ${GITHUB_REF}"
+        git config --unset-all http.https://github.com/.extraheader # https://stackoverflow.com/a/69979203
     - name: Push
       uses: ad-m/github-push-action@v0.6.0
       with:
         github_token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
         directory: starters
         repository: wangchucheng/hugo-eureka-starters-test
-      env:
-        GITHUB_TOKEN: ${{ secrets.RELEASE_GITHUB_TOKEN }}
+        branch: monolingual
     - name: Release Starters
       uses: softprops/action-gh-release@v1
       with:
