--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,7 +41,7 @@ jobs:
         cd starters
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
-        git add . && git commit -m "chore: upgrade to ${GITHUB_REF}"
+        git add . && git commit -m "chore: upgrade to ${GITHUB_REF#refs/*/}"
         git config --unset-all http.https://github.com/.extraheader # https://stackoverflow.com/a/69979203
     - name: Push
       uses: ad-m/github-push-action@v0.6.0
