--- a/exampleSite/config/_default/config.yaml
+++ b/exampleSite/config/_default/config.yaml
@@ -1,10 +1,10 @@
 baseURL: /
 title: Eureka Demo
 
-# Comment when installing using Hugo Modules
-theme: eureka
-# Uncomment when installing using Hugo Modules
-# theme: wangchucheng.com/hugo-eureka
+# Uncomment when not installing using Hugo Modules
+# theme: eureka
+# Comment when not installing using Hugo Modules
+theme: wangchucheng.com/hugo-eureka
 # If you cannot access the Github mirror, you can also use the Gitee mirror: gitee.com/wangchucheng/hugo-eureka
 
 paginate: 3
