--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -66,6 +66,7 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         repository: wangchucheng/hugo-eureka-starters-test
+        generate_release_notes: true
       env:
         GITHUB_TOKEN: ${{ secrets.RELEASE_GITHUB_TOKEN }}
     
